--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -71,7 +71,7 @@
                   <th width="40%">Plugin</th>
                   <th width="20%">Action</th>
                 </tr>
-                <tr ng-repeat="subdevice in gateway.subdevices">
+                <tr ng-repeat="subdevice in gateway.subdevices.value">
                   <td>{{subdevice.name}}</td>
                   <td>{{subdevice.type}}</td>
                   <td>
