--- a/public/pages/connector/channels/index.html
+++ b/public/pages/connector/channels/index.html
@@ -1,3 +1,29 @@
+<style>
+    .divScroll {
+        overflow:scroll;
+        height: auto;
+        max-width: 100%;
+    }
+    .scrollWrapper {
+        overflow: visible;
+        height: auto;
+        width: 100%;
+    }
+    .divScroll ul {
+        list-style-type: none;
+    }
+    .divScroll ul li {
+        display:-moz-inline-stack;
+        display:inline-block;
+        zoom: 1;
+        *display: inline;
+        padding: 10px;
+        height: auto;
+        width: auto;
+        vertical-align: top;
+    }
+</style>
+
 <button class="btn btn-success pull-right" ng-click="openNewApi()">Add</button>
 
  <div class="divScroll">
