--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -39,8 +39,10 @@
       <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-3" class="sptext">
 <!--           <a type="button" class="btn btn-default-header btn-lg" href="/home2#about"> -->
-          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
-                <b>More Info</b>
+<!--           <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()"> -->
+
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="watchVideo()">
+                <b>Watch Video</b>
           </a>
         </div>
       </div>
@@ -69,8 +71,8 @@
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-7" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
-                <b>More Info</b>
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="watchVideo()">
+                <b>Watch Video</b>
           </a>
         </div>
       </div>
@@ -101,8 +103,8 @@
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-7" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
-                <b>More Info</b>
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="watchVideo()">
+                <b>Watch Video</b>
           </a>
         </div>
       </div>
@@ -133,8 +135,8 @@
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-7" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
-                <b>More Info</b>
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="watchVideo()">
+                <b>Watch Video</b>
           </a>
         </div>
       </div>
@@ -165,8 +167,8 @@
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-7" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
-                <b>More Info</b>
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="watchVideo()">
+                <b>Watch Video</b>
           </a>
         </div>
       </div>
@@ -190,6 +192,23 @@
 
 <div class="apisx">
   <div class="container">
+    <div class="row col-xs-12 col-sm-12 text-center">
+
+<!--       <ul class="channellist"> -->
+        <span ng-repeat="channel in availableChannels | orderBy:'name'">
+              <div class="channel_icon-grid-view mod-index-0 pop-over"
+                  ng-class="{'activechannel': isActive(channel)}"
+              data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)">
+              <img ng-src="{{channel.logo}}" width="100" height="100"/>
+            </div>
+        </span>
+<!--       </ul> -->
+    </div>
+  </div>
+</div>
+
+<div class="apisx">
+  <div class="container">
     <div class="row">
       <div class="col-xs-6 col-sm-3 well text-center">
         When
@@ -198,11 +217,11 @@
   </div>
 </div>
 
-<div id="flow" class="section">
+<!-- <div id="flow" class="section">
 <h3 class="section-height" style="color:white;">USING OUR SIMPLE DRAG AND DROP DESIGNER</h3>
-</div>
+</div> -->
 
-<div class="flow"></div>
+<div class="flowx"></div>
 <div class="container margin-top-50">
 </div>
 
@@ -543,4 +562,13 @@
   </div>
   <div class="footer-copyright text-center">© 2014 - All Rights Reserved. Octoblu, Inc.</div>
 </div>
-<!-- ****************************************** CONTACT END ****************************************** -->
+
+<script type="text/ng-template" id="watchVideo.html">
+    <div class="modal-body">
+      <iframe width="560" height="315" src="//www.youtube.com/embed/FhRaMzUZfAU" frameborder="0" allowfullscreen></iframe>
+    </div>
+
+    <div class="modal-footer">
+        <button class="btn" ng-click="cancel()">Close</button>
+    </div>
+</script>
