--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 	</header>
 
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
-	<div id="main" style="display:none;">
+	<div id="main">
 
     <div id='main-nav-bg'></div>
       <nav id='main-nav'>
