removed scroll bars from wrapped connector channel style

--- a/public/pages/connector/channels/index.html
+++ b/public/pages/connector/channels/index.html
@@ -1,6 +1,6 @@
 <style>
     .divScroll {
-        overflow:scroll;
+        /*overflow:scroll;*/
         height: auto;
         max-width: 100%;
     }
