dashboard link to devices

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -15,7 +15,7 @@
         <div id="chartContainer" style="height: 300px; width:100%;"></div>
         <br />
         <div class='box-content box-statistic'>
-          <h3 class='title text-primary'><a href="/devices">{{devices.length}}</a></h3>
+          <h3 class='title text-primary'><a href="" ui-sref="connector.devices">{{devices.length}}</a></h3>
           <small>Devices</small>
           <div class='text-primary icon-lightbulb align-right'></div>
         </div>
