--- a/public/index.html
+++ b/public/index.html
@@ -193,6 +193,7 @@
 
     <!-- build:js scripts/modules.js -->
     <script src="assets/javascripts/angular-ui-router.min.js"></script>
+    <script src="assets/javascripts/angular-google-analytics.js"></script>
     <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/canvasjs.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
@@ -262,15 +263,6 @@
             s.src = '//' + disqus_shortname + '.disqus.com/count.js';
             (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
         }());
-    </script>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-2483685-30', 'octoblu.com');
-        ga('send', 'pageview');
     </script>
 </body>
 </html>
