Checking in Analyzer Page skeleton  with controller.

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         }
     </style>
 </head>
-<body class="contrast-sea-blue" ng-app="e2eApp">
+<body class="contrast-sea-blue container" ng-app="e2eApp">
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
             <a class="navbar-brand" href="" ui-sref="home">
@@ -172,7 +172,9 @@
     </div>
 
     <!-- Content -->
-    <div ui-view="" class="reveal-animation"></div>
+    <div ui-view="" class="reveal-animation">
+
+    </div>
 
     <footer></footer>
 
