--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -1,12 +1,36 @@
 <section id='content'>
-  <div class='container'>
-    <br /><br />    
-    <iframe  width="100%" height="1000" src="http://54.203.249.138:8000?output=embed" id="splunkFrame"></iframe>
-  </div>
+    <div class='container'>
+        <div class='row' id='content-wrapper'>
+            <div class='col-xs-12'>
+
+                <div class='page-header page-header-with-buttons'>
+                    <h1 class='pull-left'>
+                        <i class='icon-bar-chart'></i>
+                        <span>Analyzer</span>
+                    </h1>
+                </div>
+                <div class="pull-left"><strong>Search:</strong></div>
+                <br/><br/>
+
+                <div class="input-group">
+                    <input type="text" class="form-control" ng-model="searchText" placeholder="Search">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button" ng-click="search()">
+                                <span class="glyphicon glyphicon-search">Find</span>
+                            </button>
+                        </span>
+                </div>
+                <br/>
+                <br/>
+
+                <div class="panel panel-info">
+                    <!-- Default panel contents -->
+                    <div class="panel-heading">Results</div>
+                    <div class="panel-body">
+                        {{results}}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-<script>
-// $('#splunkFrame').attr('height',$("body").height()-50)
-// window.onresize = function(event) {
-//   $('#splunkFrame').attr('height',$("body").height()-50);
-// }
-</script>
