--- a/public/index.html
+++ b/public/index.html
@@ -202,6 +202,8 @@
     <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
     <script src="assets/javascripts/jquery.jsoneditor.js" type="text/javascript"></script>
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
+    <script src="assets/javascripts/isotope.js"></script>
+    <script src="assets/javascripts/skroller.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
