Adding Gateway page back into advanced tab.

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         }
     </style>
 </head>
-<body class="contrast-sea-blue container" ng-app="e2eApp">
+<body class="contrast-sea-blue" ng-app="e2eApp">
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
             <a class="navbar-brand" href="" ui-sref="home">
@@ -188,6 +188,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-sanitize.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-cookies.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/athenaSlide.js"></script>
     <script src="assets/javascripts/underscore.js"></script>
