--- a/public/pages/connector/advanced/index.html
+++ b/public/pages/connector/advanced/index.html
@@ -9,6 +9,9 @@
         <li ng-class="{'active': $state.includes('connector.advanced.messaging')}">
             <a href="" ui-sref="connector.advanced.messaging">Device Messaging</a>
         </li>
+        <li ng-class="{'active': $state.includes('connector.advanced.gateways')}">
+            <a href="" ui-sref="connector.advanced.messaging">Hubs</a>
+        </li>
     </ul>
     <div class="tab-content" ui-view="">
     </div>
