--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -15,18 +15,22 @@
    }
    .divScroll ul li {
      display:-moz-inline-stack;
-   display:inline-block;
-   zoom: 1;
-   *display: inline;
-   padding: 10px;
-   height: auto;
+     display:inline-block;
+     zoom: 1;
+     *display: inline;
+     padding: 10px;
+     height: auto;
      width: auto;
      vertical-align: top;
    }
 /*  .item { width: 25%; }
   .item.w2 { width: 50%; }*/
 
+.container{
+  padding-left:0px;
+  padding-right:0px;
 
+}
 
 html, body {
 	width:100%;
@@ -328,21 +332,20 @@ html, body {
 
 
 <div class="container">
-  <div class="row">
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+  <div class="row" style="height:600px">
 
   </div>
 </div>
 </div>
 
-<div id="easing_wrapper" data-0="display:none;" data-1000="display:block;" data-1900="background:rgba(0, 0, 0, 0);color[swing]:rgb(0,0,0);" data-1900="background:rgba(0,0,0,1);color:rgb(255,255,255);" data-10000="top:0%;" data-12000="top:-100%;">
-		<div id="easing" data-900="left:100%" data-1400="left:25%;">
-			<h2>Smart Devices</h2>
-			<p>123</p>
+<div id="easing_wrapper" data-0="display:none;" data-700="display:block;" data-4000="top:0%;" data-4000="top:-100%;">
+		<div id="easing" data-500="left:100%" data-1200="left:25%;">
+			<h2><img ng-src="{{availableChannels[3].logo}}" width="100" height="100"/></h2>
+<!-- 			<p>123</p> -->
     </div>
-    <div id="easing" data-900="left:0%" data-1400="left:75%;">
-      <h2>OK Devices</h2>
-      <p>123</p>
+    <div id="easing" data-500="left:0%" data-1200="left:75%;">
+      <h2><img ng-src="{{availableChannels[2].logo}}" width="100" height="100"/></h2>
+<!--       <p>123</p> -->
     </div>
 </div>
 
@@ -741,16 +744,17 @@ setTimeout(function(){
     layoutMode: 'fitRows'
   });
 
-  //   Skroller
-  var s = skrollr.init({
-		edgeStrategy: 'set',
-		easing: {
-			WTF: Math.random,
-			inverted: function(p) {
-				return 1-p;
-			}
-		}
-	});
-
 },3000);
+
+//   Skroller
+var s = skrollr.init({
+  edgeStrategy: 'set',
+  easing: {
+    WTF: Math.random,
+    inverted: function(p) {
+      return 1-p;
+    }
+  }
+});
+
 </script>
