rolled back async getdefaults

--- a/public/pages/connector/advanced/index.html
+++ b/public/pages/connector/advanced/index.html
@@ -10,7 +10,7 @@
             <a href="" ui-sref="connector.advanced.messaging">Device Messaging</a>
         </li>
         <li ng-class="{'active': $state.includes('connector.advanced.gateways')}">
-            <a href="" ui-sref="connector.advanced.messaging">Hubs</a>
+            <a href="" ui-sref="connector.advanced.gateways">Hubs</a>
         </li>
     </ul>
     <div class="tab-content" ui-view="">
