mocking up dashboard ui

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <h3>Test</h3>
+                                {{insert angular code here}}
                             </div>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                Basic panel example
+                                {{insert angular code here}}
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                Basic panel example
+                                {{insert angular code here}}
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                Basic panel example
+                                {{insert angular code here}}
                             </div>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                Basic panel example
+                                {{insert angular code here}}
                             </div>
                         </div>
                     </div>
