--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="box-content">
                     <div class="well">Learn from our powerful knowledge base for creating projects and intergrated Octoblu systems.</div>
-                    <a href="http://blog.octoblu.com/" title="Octoblu Forum" class="btn btn-primary"><i class='icon-comments'></i>  Go to Blog</a>
+                    <a href="http://blog.octoblu.com/" title="Octoblu Blog" class="btn btn-primary"><i class='icon-comments'></i>  Go to Blog</a>
                 </div>
             </div>
             <div class="col-sm-6 box">
