fixed channel logo not showing sometimes due to size

--- a/public/pages/api_detail.html
+++ b/public/pages/api_detail.html
@@ -3,7 +3,7 @@
     <div class="text-center">
 
       <div class="pull-left">
-        <img src="{{logo_url()}}" height="100px" /> &nbsp; <h2>{{channel.name}}</h2>
+        <img src="{{logo_url()}}" height="100px" width="100px" /> &nbsp; <h2>{{channel.name}}</h2>
         <div ng-show="channel.owner">
           <button class="btn btn-large btn-success" ng-click="editCustom()" >Edit</button>
         </div>
