--- a/public/pages/connector/channels/detail.html
+++ b/public/pages/connector/channels/detail.html
@@ -76,6 +76,7 @@
             <a class="btn disabled btn-large btn-primary" ng-show="resource.httpMethod == 'GET'"> GET</a>
             <a class="btn disabled btn-large btn-success" ng-show="resource.httpMethod == 'POST'"> POST</a>
             <a class="btn disabled btn-large btn-inverse" ng-show="resource.httpMethod == 'PUT'"> PUT</a>
+            <a class="btn disabled btn-large btn-warning" ng-show="resource.httpMethod == 'PATCH'"> PATCH</a>
             <a class="btn disabled btn-large btn-danger" ng-show="resource.httpMethod == 'DELETE'"> DELETE</a>
 
           </td>
