updates on elastic search client side
Signed-off-by: Chris Matthieu <chris@matthieu.us>

--- a/public/index.html
+++ b/public/index.html
@@ -207,10 +207,21 @@
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="assets/javascripts/isotope.js"></script>
     <script src="assets/javascripts/skroller.js"></script>
+    <script src="assets/javascripts/elasticsearch.angular.js"></script>
+    <script src="assets/javascripts/elastic.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="angular/app.js"></script>
+    <script src="angular/services/user.js"></script>
+    <script src="angular/services/owner.js"></script>
+    <script src="angular/services/device.js"></script>
+    <script src="angular/services/channel.js"></script>
+    <script src="angular/services/nodered.js"></script>
+    <script src="angular/services/message.js"></script>
+<!--     // <script src="angular/services/elastic.js"></script> -->
+    <script src="angular/directives/popover.js"></script>
+
     <script src="angular/controllers/about.js"></script>
     <script src="angular/controllers/admin.js"></script>
     <script src="angular/controllers/analyzer.js"></script>
@@ -230,13 +241,6 @@
     <script src="angular/controllers/profile.js"></script>
     <script src="angular/controllers/services.js"></script>
     <script src="angular/controllers/signup.js"></script>
-    <script src="angular/directives/popover.js"></script>
-    <script src="angular/services/user.js"></script>
-    <script src="angular/services/owner.js"></script>
-    <script src="angular/services/device.js"></script>
-    <script src="angular/services/channel.js"></script>
-    <script src="angular/services/nodered.js"></script>
-    <script src="angular/services/message.js"></script>
     <!-- endbuild -->
 
     <!--
