Debugging code for elasticService not working. Checking in basic device wizard code.

--- a/public/index.html
+++ b/public/index.html
@@ -207,8 +207,8 @@
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="assets/javascripts/isotope.js"></script>
     <script src="assets/javascripts/skroller.js"></script>
-    <script src="assets/javascripts/elasticsearch.angular.js"></script>
-    <script src="assets/javascripts/elastic.min.js"></script>
+    <!--<script src="assets/javascripts/elasticsearch.angular.js"></script>-->
+    <!--<script src="assets/javascripts/elastic.min.js"></script>-->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -219,7 +219,7 @@
     <script src="angular/services/channel.js"></script>
     <script src="angular/services/nodered.js"></script>
     <script src="angular/services/message.js"></script>
-<!--     // <script src="angular/services/elastic.js"></script> -->
+    <script src="angular/services/elastic.js"></script>
     <script src="angular/directives/popover.js"></script>
 
     <script src="angular/controllers/about.js"></script>
@@ -229,6 +229,7 @@
     <script src="angular/controllers/connector.js"></script>
     <script src="angular/controllers/contact.js"></script>
     <script src="angular/controllers/controller.js"></script>
+    <script src="angular/controllers/device.js"></script>
     <script src="angular/controllers/dashboard.js"></script>
     <script src="angular/controllers/designer.js"></script>
     <script src="angular/controllers/devtools.js"></script>
