--- a/public/pages/connector/devices/wizard/index.html
+++ b/public/pages/connector/devices/wizard/index.html
@@ -1,17 +1,50 @@
-<div class="modal fade" id="device-wizard" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
                 <h4 class="modal-title" id="myModalLabel">Add a new Hub</h4>
             </div>
             <div class="modal-body">
-                ...
+                <div ng-if="currentState.name === 'instructions'">
+                    <h2>Instructions</h2>
+
+                </div>
+                <div ng-if="currentState.name === 'find-hub'">
+                    <h2>Find Hub</h2>
+
+                </div>
+                <div ng-if="currentState.name === 'edit-hub'">
+                    <h2>Edit Hub</h2>
+
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancel()">Close</button>
+                <button type="button" id="wizard-previous-btn" class="btn btn-success" ng-click="previous(currentState)">Previous</button>
+                <button id="wizard-next-btn" type="button" class="btn btn-success" ng-click="next(currentState)">Next</button>
             </div>
         </div>
-    </div>
-</div>
+
+<!--<div ng-controller="ModalDemoCtrl">-->
+    <!--<script type="text/ng-template" id="deviceWizardModal.html">-->
+        <!--<div class="modal-header">-->
+            <!--<h3>I'm a modal!</h3>-->
+        <!--</div>-->
+        <!--<div class="modal-body">-->
+            <!--<ul>-->
+                <!--<li ng-repeat="item in items">-->
+                    <!--<a ng-click="selected.item = item">{{ item }}</a>-->
+                <!--</li>-->
+            <!--</ul>-->
+            <!--Selected: <b>{{ selected.item }}</b>-->
+        <!--</div>-->
+        <!--<div class="modal-footer">-->
+            <!--<button class="btn btn-primary" ng-click="ok()">OK</button>-->
+            <!--<button class="btn btn-warning" ng-click="cancel()">Cancel</button>-->
+        <!--</div>-->
+    <!--</script>-->
+
+    <!--<button class="btn btn-default" ng-click="open()">Open me!</button>-->
+    <!--<div ng-show="selected">Selection from a modal: {{ selected }}</div>-->
+<!--</div>-->
+
+
