--- a/public/index.html
+++ b/public/index.html
@@ -207,8 +207,8 @@
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="assets/javascripts/isotope.js"></script>
     <script src="assets/javascripts/skroller.js"></script>
-    <!--<script src="assets/javascripts/elasticsearch.angular.js"></script>-->
-    <!--<script src="assets/javascripts/elastic.min.js"></script>-->
+    <script src="assets/javascripts/elastic.min.js"></script>
+    <script src="assets/javascripts/elasticsearch.angular.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
