reworked advanced tab ui

--- a/public/pages/connector/advanced/channels.html
+++ b/public/pages/connector/advanced/channels.html
@@ -1,3 +1,5 @@
+<button class="btn btn-success pull-right" ng-click="openNewApi()">Add</button>
+
 <h3><i class='icon-edit'></i> Custom </h3>
 
 <ul class="channellist">
@@ -10,4 +12,7 @@
         </div>
     </li>
 </ul>
+
+<div ui-view>
+</div>
 </div>
