--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -17,7 +17,7 @@
                         <a href="" ui-sref="connector.channels.index">Channels</a>
                     </li>
                     <li ng-class="{'active': $state.includes('connector.advanced')}">
-                        <a href="" ui-sref="connector.advanced">Advanced</a>
+                        <a href="" ui-sref="connector.advanced.devices">Advanced</a>
                     </li>
                 </ul>
                 <div class="tab-content" ui-view="">
@@ -27,4 +27,3 @@
         </div>
     </div>
 </section>
-
