added owner to elastic query

--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -9,6 +9,8 @@
                         <span>Analyzer</span>
                     </h1>
                 </div>
+                <div class="pull-left"><strong>Your UUID is:</strong> {{skynetuuid}}</div><br /><br />
+
                 <div class="pull-left"><strong>Search:</strong></div>
                 <br/><br/>
 
