--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -20,134 +20,84 @@
                         <span>Dashboard - {{user}}</span>
                     </h1>
                 </div>
-                <div style="margin-bottom: 30px;"><strong>Your UUID is:</strong> {{skynetuuid}}</div>
                 <div class="row">
-                    <div class="col-sm-6">
-                        <div class="row">
-                            <div class="col-sm-6 dashboard-panel">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title">Devices</h3>
-                                </div>
-                                <div class="panel panel-default">
-                                    <a href="" ui-sref="connector.devices">
-                                        <div class="panel-body">
-                                            <div ng-switch="!!devices ? devices.length : 0" >
-                                                <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                                <div ng-switch-default><h1>{{devices.length}}</h1></div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 dashboard-panel">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title">Monthly messages</h3>
-                                </div>
-                                <div class="panel panel-default">
-                                    <a href="" ui-sref="connector.devices">
-                                        <div class="panel-body">
-                                            <div ng-switch="!!devices ? devices.length : 0" >
-                                                <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                                <div ng-switch-default><h1>{{devices.length}}</h1></div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6 dashboard-panel">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title">Active Channels</h3>
-                                </div>
-                                <div class="panel panel-default">
-                                    <a href="" ui-sref="connector.devices">
-                                        <div class="panel-body">
-                                            <div ng-switch="!!devices ? devices.length : 0" >
-                                                <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                                <div ng-switch-default><h1>{{devices.length}}</h1></div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 dashboard-panel">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title">Price Tier</h3>
-                                </div>
-                                <div class="panel panel-default">
-                                    <a href="" ui-sref="connector.devices">
-                                        <div class="panel-body">
-                                            <div ng-switch="!!devices ? devices.length : 0" >
-                                                <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                                <div ng-switch-default><h1>{{devices.length}}</h1></div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
+                    <div class="col-sm-12">
+                        <!--<div class="pull-right" style="margin-top: -5px;">-->
+                            <!--<button class="btn btn-sm btn-default">Upgrade Plan</button>-->
+                        <!--</div>-->
+                        <div style="margin-bottom: 30px;">
+                            <strong>Your UUID is:</strong> {{skynetuuid}}
                         </div>
                     </div>
-                    <div class="col-sm-6 dashboard-panel">
+                </div>
+                <div class="row">
+                    <div class="col-sm-4 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Devices</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <a href="" ui-sref="connector.devices">
+                                <div class="panel-body">
+                                    <div ng-switch="!!devices ? devices.length : 0" >
+                                        <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                        <div ng-switch-default><h1>{{devices.length}}</h1></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Monthly Messages</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <a href="" ui-sref="connector.devices">
+                                <div class="panel-body">
+                                    <div ng-switch="!!devices ? devices.length : 0" >
+                                        <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                        <div ng-switch-default><h1>{{devices.length}}</h1></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Active Channels</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <a href="" ui-sref="connector.devices">
+                                <div class="panel-body">
+                                    <div ng-switch="!!devices ? devices.length : 0" >
+                                        <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                        <div ng-switch-default><h1>{{devices.length}}</h1></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--<div class="row">-->
+                    <!--<div class="col-sm-11">-->
+                        <!--<div>Subscription - Unlimited:</div>-->
+                        <!--<div class="progress progress-striped">-->
+                            <!--<div class="progress-bar progress-bar-default" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">-->
+                                <!--<span class="sr-only">20% Complete</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="row col-sm-1" style="margin-top: 15px;">-->
+                        <!--<button class="btn btn-sm btn-default">Upgrade</button>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="row">
+                    <div class="col-sm-12 dashboard-panel">
                         <div class="panel-heading">
                             <h3 class="panel-title">Real-time Device Activity</h3>
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-body" style="text-align: left;">
                                 <div id="chartContainer" style="height: 300px; width:100%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="progress progress-striped">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                                <span class="sr-only">20% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Panel #1</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                insert code here
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Panel #2</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                insert code here
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Panel #3</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                insert code here
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Panel #4</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                insert code here
                             </div>
                         </div>
                     </div>
