adjusted event count to only include codes from 300-399 messages sends to analyzer (billing in the future?)

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -70,7 +70,7 @@
                             <h3 class="panel-title">Monthly Messages</h3>
                         </div>
                         <div class="panel panel-default">
-                            <a href="" ui-sref="connector.devices">
+                            <a href="" ui-sref="analyzer">
                                 <div class="panel-body">
                                     <div ng-switch="!!events ? events.total : -1" >
                                         <h1>
