--- a/public/pages/connector/devices/wizard/index.html
+++ b/public/pages/connector/devices/wizard/index.html
@@ -1,51 +1,17 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
-                <h4 class="modal-title" id="myModalLabel"><i class="fa fa-home fa-2x"></i>Add a new Hub</h4>
+                <h4 class="modal-title" id="myModalLabel"><i class="fa fa-home fa-2x"></i>&nbsp;&nbsp;Add a new Hub</h4>
             </div>
             <div class="modal-body">
-                <div ng-if="currentState.name === 'instructions'">
-                    <h3>Instructions</h3>
-
-                </div>
-                <div ng-if="currentState.name === 'find-hub'">
-                    <h3>Find Hub</h3>
-
-                </div>
-                <div ng-if="currentState.name === 'edit-hub'">
-                    <h3>Edit Hub</h3>
-
-                </div>
+              <ui-view></ui-view>
             </div>
             <div class="modal-footer">
                 <button type="button" id="wizard-cancel-btn" class="btn btn-danger" data-dismiss="modal" ng-click="cancel()"><i class="fa fa-times"></i>&nbsp;&nbsp;Close</button>
-                <button type="button" id="wizard-previous-btn" class="btn btn-default" ng-click="previous(currentState)"><i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous</button>
-                <button id="wizard-next-btn" type="button" class="btn btn-default" ng-click="next(currentState)">Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i></button>
-                <button id="wizard-finish-btn" type="button" class="btn btn-success" disabled="disabled"><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</button>
+                <button type="button" id="wizard-previous-btn" class="btn btn-default" ng-click="previous()"><i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous</button>
+                <button type="button" id="wizard-next-btn" class="btn btn-default" ng-click="next()">Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i></button>
+                <button type="button" id="wizard-finish-btn"  class="btn btn-success" disabled="disabled"><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</button>
             </div>
         </div>
-
-<!--<div ng-controller="ModalDemoCtrl">-->
-    <!--<script type="text/ng-template" id="deviceWizardModal.html">-->
-        <!--<div class="modal-header">-->
-            <!--<h3>I'm a modal!</h3>-->
-        <!--</div>-->
-        <!--<div class="modal-body">-->
-            <!--<ul>-->
-                <!--<li ng-repeat="item in items">-->
-                    <!--<a ng-click="selected.item = item">{{ item }}</a>-->
-                <!--</li>-->
-            <!--</ul>-->
-            <!--Selected: <b>{{ selected.item }}</b>-->
-        <!--</div>-->
-        <!--<div class="modal-footer">-->
-            <!--<button class="btn btn-primary" ng-click="ok()">OK</button>-->
-            <!--<button class="btn btn-warning" ng-click="cancel()">Cancel</button>-->
-        <!--</div>-->
-    <!--</script>-->
-
-    <!--<button class="btn btn-default" ng-click="open()">Open me!</button>-->
-    <!--<div ng-show="selected">Selection from a modal: {{ selected }}</div>-->
-<!--</div>-->
 
 
