--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
     <link href="/assets/stylesheets/animation.css" rel="stylesheet">
     <link href="/assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
     <link href="/assets/stylesheets/athenaSlide.css" rel="stylesheet">
+    <link href="/lib/nvd3/nv.d3.min.css" rel="stylesheet">
+    <!--<link href="/lib/dangle/css/dangle.css" rel="stylesheet">-->
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
     <script src="http://skynet.im/js/skynet.js"></script>
@@ -191,7 +193,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-cookies.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/athenaSlide.js"></script>
+    <script src="assets/javascripts/moment.min.js"></script>
     <script src="assets/javascripts/underscore.js"></script>
+    <script src="lib/d3/d3.min.js"></script>
+    <script src="lib/nvd3/nv.d3.min.js"></script>
+    <!--<script src="lib/dangle/dist/dangle.min.js"></script>-->
+
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
@@ -220,8 +227,8 @@
     <script src="angular/services/nodered.js"></script>
     <script src="angular/services/message.js"></script>
     <script src="angular/services/elastic.js"></script>
+    <script src="angular/directives/nvd3-line-chart.js"></script>
     <script src="angular/directives/popover.js"></script>
-
     <script src="angular/controllers/about.js"></script>
     <script src="angular/controllers/admin.js"></script>
     <script src="angular/controllers/analyzer.js"></script>
