--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -36,16 +36,14 @@
                             <h3 class="panel-title">Devices</h3>
                         </div>
                         <div class="panel panel-default">
-                            <a href="" ui-sref="connector.devices">
-                                <div class="panel-body">
-                                    <div ng-switch="!!devices ? devices.length : 0" >
-                                        <h1>
-                                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                            <div ng-switch-default>{{devices.length}}</div>
-                                        </h1>
-                                    </div>
+                            <div class="panel-body">
+                                <div ng-switch="!!devices ? devices.length : 0" >
+                                    <h1>
+                                        <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                        <div ng-switch-default><a href="" ui-sref="connector.devices">{{devices.length}}</a></div>
+                                    </h1>
                                 </div>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-4 dashboard-panel">
@@ -53,33 +51,30 @@
                             <h3 class="panel-title">Active Channels</h3>
                         </div>
                         <div class="panel panel-default">
-                            <a href="" ui-sref="connector.channels.index">
-                                <div class="panel-body">
-                                    <div ng-switch="!!channels ? channels.length : 0" >
-                                        <h1>
-                                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                            <div ng-switch-default>{{channels.length}}</div>
-                                        </h1>
-                                    </div>
+
+                            <div class="panel-body">
+                                <div ng-switch="!!channels ? 1 : 0" >
+                                    <h1>
+                                        <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                        <div ng-switch-default><a href="" ui-sref="connector.channels.index">{{channels.length}}</a></div>
+                                    </h1>
                                 </div>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-4 dashboard-panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Monthly Messages</h3>
+                            <h3 class="panel-title">Total Messages (30 days)</h3>
                         </div>
                         <div class="panel panel-default">
-                            <a href="" ui-sref="analyzer">
-                                <div class="panel-body">
-                                    <div ng-switch="!!events ? events.total : -1" >
-                                        <h1>
-                                            <div ng-switch-when="-1"><i class="fa fa-cog fa-spin"></i></div>
-                                            <div ng-switch-default>{{events.total}}</div>
-                                        </h1>
-                                    </div>
+                            <div class="panel-body">
+                                <div ng-switch="!!events ? 1 : 0" >
+                                    <h1>
+                                        <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                        <div ng-switch-default><a href="" ui-sref="analyzer">{{events.total}}</a></div>
+                                    </h1>
                                 </div>
-                            </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -96,6 +91,82 @@
                         <!--<button class="btn btn-sm btn-default">Upgrade</button>-->
                     <!--</div>-->
                 <!--</div>-->
+
+                <!--<div class="row">-->
+                    <!--<div class="col-sm-8 dashboard-panel">-->
+                        <!--<div class="panel-heading">-->
+                            <!--<h3 class="panel-title">Messages</h3>-->
+                        <!--</div>-->
+                        <!--<div class="panel panel-default">-->
+                            <!--<div class="panel-body">-->
+                                <!--<div ng-switch="!!events ? 1 : 0" >-->
+                                    <!--<div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>-->
+                                    <!--<div ng-switch-default  style="height: 250px;">-->
+                                        <!--<fs:area-->
+                                            <!--bind="events.facets.times"-->
+                                            <!--duration="750"-->
+                                            <!--interpolate="true" />-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-4 dashboard-panel">-->
+                        <!--<div class="panel-heading">-->
+                            <!--<h3 class="panel-title">Top Messages</h3>-->
+                        <!--</div>-->
+                        <!--<div class="panel panel-default">-->
+                            <!--<div class="panel-body">-->
+                                <!--<div ng-switch="!!events ? 1 : 0" >-->
+                                    <!--<div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>-->
+                                    <!--<div ng-switch-default style="height: 250px;">-->
+                                        <!--<fs:donut-->
+                                            <!--outer-radius="200"-->
+                                            <!--inner-radius="75"-->
+                                            <!--duration="750"-->
+                                            <!--bind="events.facets.types" />-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="row">
+                    <div class="col-sm-8 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Messages</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <a href="" ui-sref="analyzer">
+                                <div class="panel-body">
+                                    <div ng-switch="!!events ? 1 : 0" >
+                                        <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                        <div ng-switch-default>
+                                            <div nvd3-line-chart show-legend="false" axis-x-label="Day" axis-x-type="date" axis-x-format="%-m/%-d" axis-y-label="Events" data="events.times" height="300"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Top Messages</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <a href="" ui-sref="analyzer">
+                                <div class="panel-body">
+                                    <div ng-switch="!!events ? 1 : 0" >
+                                        <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                        <div ng-switch-default>
+                                            <div nvd3-ipe-chart data="events.terms" height="300"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-sm-12 dashboard-panel">
                         <div class="panel-heading">
